tests/errors/intrinsics11.f90
program intrinsics11
    real(4) :: x = 1
    real(8) :: y = 2
    print *, hypot(x, y)
end program